--- a/Members.html
+++ b/Members.html
@@ -53,5 +53,27 @@
                 </ul>
           </p>
         </section>
+
+
+        <section class="top_section">
+          <div class="image_container">
+            <img src="Bakry.jfif" alt="Bakry" width="24" height="39">
+           
+          </div>
+          <div>
+            <h2>born on 23/7/2003</h2>
+          </div>
+        </section>
+        <section class="about_section">
+          <h2>Youssef Abdelrahman Bakry</h2>
+          <p>
+            <b>
+                <ul>
+                <li>ID:2021/04707
+                <li>Email:yousef2104707@miuegypt.edu.eg
+                <li><a href="https://github.com/YoussefBakry5">Github: Youssef Bakry</a>
+                </ul>
+          </p>
+        </section>
   </body>
 </html>
