--- a/Members.html
+++ b/Members.html
@@ -75,5 +75,25 @@
                 </ul>
           </p>
         </section>
+        <section class="top_section">
+          <div class="image_container">
+            <img src="k.jpeg" alt="k" width="24" height="39">
+           
+          </div>
+          <div>
+            <h2>born on 14/10/2003</h2>
+          </div>
+        </section>
+        <section class="about_section">
+          <h2>Aly Arafat</h2>
+          <p>
+            <b>
+                <ul>
+                <li>ID:2021/08454
+                <li>Email:aly21084540@miuegypt.edu.eg
+                <li><a href="https://github.com/arafat3300">Github:Aly Arafat</a>
+                </ul>
+          </p>
+        </section>
   </body>
 </html>
