mohamed aly change

--- a/Members.html
+++ b/Members.html
@@ -95,5 +95,28 @@
                 </ul>
           </p>
         </section>
+
+
+
+        <section class="top_section">
+          <div class="image_container">
+            <img src="Mo.jpg" alt="Mo" width="24" height="39">
+           
+          </div>
+          <div>
+            <h2>born on 4/12/2003</h2>
+          </div>
+        </section>
+        <section class="about_section">
+          <h2>Mohamed Aly hussien</h2>
+          <p>
+            <b>
+                <ul>
+                <li>ID:2021/08019
+                <li>Email:mohamed2108019@miuegypt.edu.eg
+                <li><a href="https://github.com/mohamedalyhussien">Github:Mohamed Aly</a>
+                </ul>
+          </p>
+        </section>
   </body>
 </html>
